--- a/css/main.css
+++ b/css/main.css
@@ -34,12 +34,25 @@ h1 {
   width: 70%;
   padding-bottom: 20px; }
 
-input[type=text], input[type=email], input[type=number], input[type=submit] {
+input[type=text], input[type=email], input[type=number], input[type=submit], input[type=reset] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0; }
 
 .enviar:hover {
   background-color: mediumspringgreen; }
+
+input[type=text]:invalid, input[type=email]:invalid {
+  border: 2px dashed red;
+  background-color: rgba(233, 123, 10, 0.5); }
+input[type=text]:valid, input[type=email]:valid {
+  border: 2px solid black;
+  background-color: rgba(89, 240, 109, 0.3); }
+
+.rut:invalid {
+  border: 2px dashed red; }
+  .rut:invalid:required {
+    background-image: -webkit-gradient(linear, left top, right top, from(pink), to(lightgreen));
+    background-image: linear-gradient(to right, pink, lightgreen); }
 
 /*# sourceMappingURL=main.css.map */
