--- a/Ejercicio_8/sass/main.scss
+++ b/Ejercicio_8/sass/main.scss
@@ -13,3 +13,11 @@ form {
     padding: 1em;
     background-color: rgb(245, 236, 222);
 }
+
+input[type="text"] {
+    transition: background-color .6s ease-in-out;
+    
+    &:focus {
+        background-color: rgb(239, 255, 250);
+    }
+}
