--- a/Ejercicio_8/sass/main.scss
+++ b/Ejercicio_8/sass/main.scss
@@ -21,3 +21,13 @@ input[type="text"] {
         background-color: rgb(239, 255, 250);
     }
 }
+
+.textoNuevo {
+    font-size: 2em;
+    margin: auto;
+    text-align: center;
+    padding: 1em;
+    color: rgb(36, 49, 168);
+    background-color: rosybrown;
+    border: 1px solid black;
+}
