--- a/Ejercicio_9/css/main.css
+++ b/Ejercicio_9/css/main.css
@@ -17,4 +17,8 @@ input[type="submit"], input[type="reset"] {
   padding: 1em;
   margin: 1em; }
 
+.error {
+  border: 1px solid black;
+  background-color: rgba(220, 20, 60, 0.466); }
+
 /*# sourceMappingURL=main.css.map */
