--- a/Ejercicio_9/sass/main.scss
+++ b/Ejercicio_9/sass/main.scss
@@ -20,3 +20,8 @@ input[type="submit"], input[type="reset"] {
     padding: 1em;
     margin: 1em;
 }
+
+.error {
+    border: 1px solid black;
+    background-color: rgba(220, 20, 60, 0.466);
+}
